src/main/antlr4/org/opal/.antlr/OpalParser.java
// Generated from /Users/matthewcleary/workspace/delta-sprint1/opal3/src/main/antlr4/org/opal/OpalParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class OpalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AS=1, CAST=2, DELETE=3, FALSE=4, IMPORT=5, NEW=6, PACKAGE=7, THIS=8, TRUE=9, 
		USE=10, VAR=11, BOOL=12, DOUBLE=13, FLOAT=14, FLOAT32=15, FLOAT64=16, 
		INT=17, INT8=18, INT16=19, INT32=20, INT64=21, LONG=22, NULL_T=23, SHORT=24, 
		UINT=25, UINT8=26, UINT16=27, UINT32=28, UINT64=29, VOID=30, AMPERSAND=31, 
		ASTERISK=32, BAR=33, CARAT=34, COMMA=35, COLON=36, DASH=37, EQUAL=38, 
		LESS=39, GREATER=40, PERIOD=41, PLUS=42, SEMICOLON=43, SLASH=44, AMPERSAND_X2=45, 
		BAR_X2=46, EQUAL_X2=47, NOT_EQUAL=48, GREATER_EQUAL=49, LESS_EQUAL=50, 
		GREATER_X2=51, LESS_X2=52, DASH_GREATER=53, L_BRACE=54, L_BRACKET=55, 
		L_PARENTHESIS=56, R_BRACE=57, R_BRACKET=58, R_PARENTHESIS=59, NEWLINE=60, 
		WHITESPACE=61, IDENTIFIER=62, INT_LITERAL=63;
	public static final int
		RULE_translationUnit = 0, RULE_packageDeclaration = 1, RULE_importDeclarations = 2, 
		RULE_importDeclaration = 3, RULE_importQualifiedName = 4, RULE_importName = 5, 
		RULE_useDeclarations = 6, RULE_useDeclaration = 7, RULE_useQualifiedName = 8, 
		RULE_useQualifiedNameTail = 9, RULE_useNameGroup = 10, RULE_useNameWildcard = 11, 
		RULE_otherDeclarations = 12, RULE_variableDeclaration = 13, RULE_initializer = 14, 
		RULE_expression = 15, RULE_assignmentExpression = 16, RULE_logicalOrExpression = 17, 
		RULE_logicalAndExpression = 18, RULE_inclusiveOrExpression = 19, RULE_exclusiveOrExpression = 20, 
		RULE_andExpression = 21, RULE_equalityExpression = 22, RULE_relationalExpression = 23, 
		RULE_shiftExpression = 24, RULE_additiveExpression = 25, RULE_multiplicativeExpression = 26, 
		RULE_unaryExpression = 27, RULE_castExpression = 28, RULE_deleteExpression = 29, 
		RULE_newExpression = 30, RULE_newPlacement = 31, RULE_newInitializer = 32, 
		RULE_postfixExpression = 33, RULE_arraySubscript = 34, RULE_dereferencingMemberAccess = 35, 
		RULE_memberAccess = 36, RULE_routineCall = 37, RULE_routineArguments = 38, 
		RULE_routineArgument = 39, RULE_primaryExpression = 40, RULE_parenthesizedExpression = 41, 
		RULE_literal = 42, RULE_booleanLiteral = 43, RULE_integerLiteral = 44, 
		RULE_typeSpecifier = 45, RULE_type = 46, RULE_pointerGroup = 47, RULE_arrayGroup = 48, 
		RULE_directType = 49, RULE_nominalType = 50, RULE_primitiveType = 51;
	private static String[] makeRuleNames() {
		return new String[] {
			"translationUnit", "packageDeclaration", "importDeclarations", "importDeclaration", 
			"importQualifiedName", "importName", "useDeclarations", "useDeclaration", 
			"useQualifiedName", "useQualifiedNameTail", "useNameGroup", "useNameWildcard", 
			"otherDeclarations", "variableDeclaration", "initializer", "expression", 
			"assignmentExpression", "logicalOrExpression", "logicalAndExpression", 
			"inclusiveOrExpression", "exclusiveOrExpression", "andExpression", "equalityExpression", 
			"relationalExpression", "shiftExpression", "additiveExpression", "multiplicativeExpression", 
			"unaryExpression", "castExpression", "deleteExpression", "newExpression", 
			"newPlacement", "newInitializer", "postfixExpression", "arraySubscript", 
			"dereferencingMemberAccess", "memberAccess", "routineCall", "routineArguments", 
			"routineArgument", "primaryExpression", "parenthesizedExpression", "literal", 
			"booleanLiteral", "integerLiteral", "typeSpecifier", "type", "pointerGroup", 
			"arrayGroup", "directType", "nominalType", "primitiveType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'as'", "'cast'", "'delete'", "'false'", "'import'", "'new'", "'package'", 
			"'this'", "'true'", "'use'", "'var'", "'bool'", "'double'", "'float'", 
			"'float32'", "'float64'", "'int'", "'int8'", "'int16'", "'int32'", "'int64'", 
			"'long'", "'null_t'", "'short'", "'uint'", "'uint8'", "'uint16'", "'uint32'", 
			"'uint64'", "'void'", "'&'", "'*'", "'|'", "'^'", "','", "':'", "'-'", 
			"'='", "'<'", "'>'", "'.'", "'+'", "';'", "'/'", "'&&'", "'||'", "'=='", 
			"'!='", "'>='", "'<='", "'>>'", "'<<'", "'->'", "'['", "'{'", "'('", 
			"']'", "'}'", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AS", "CAST", "DELETE", "FALSE", "IMPORT", "NEW", "PACKAGE", "THIS", 
			"TRUE", "USE", "VAR", "BOOL", "DOUBLE", "FLOAT", "FLOAT32", "FLOAT64", 
			"INT", "INT8", "INT16", "INT32", "INT64", "LONG", "NULL_T", "SHORT", 
			"UINT", "UINT8", "UINT16", "UINT32", "UINT64", "VOID", "AMPERSAND", "ASTERISK", 
			"BAR", "CARAT", "COMMA", "COLON", "DASH", "EQUAL", "LESS", "GREATER", 
			"PERIOD", "PLUS", "SEMICOLON", "SLASH", "AMPERSAND_X2", "BAR_X2", "EQUAL_X2", 
			"NOT_EQUAL", "GREATER_EQUAL", "LESS_EQUAL", "GREATER_X2", "LESS_X2", 
			"DASH_GREATER", "L_BRACE", "L_BRACKET", "L_PARENTHESIS", "R_BRACE", "R_BRACKET", 
			"R_PARENTHESIS", "NEWLINE", "WHITESPACE", "IDENTIFIER", "INT_LITERAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "OpalParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public OpalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TranslationUnitContext extends ParserRuleContext {
		public PackageDeclarationContext packageDeclaration() {
			return getRuleContext(PackageDeclarationContext.class,0);
		}
		public TerminalNode EOF() { return getToken(OpalParser.EOF, 0); }
		public ImportDeclarationsContext importDeclarations() {
			return getRuleContext(ImportDeclarationsContext.class,0);
		}
		public UseDeclarationsContext useDeclarations() {
			return getRuleContext(UseDeclarationsContext.class,0);
		}
		public OtherDeclarationsContext otherDeclarations() {
			return getRuleContext(OtherDeclarationsContext.class,0);
		}
		public TranslationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_translationUnit; }
	}

	public final TranslationUnitContext translationUnit() throws RecognitionException {
		TranslationUnitContext _localctx = new TranslationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_translationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			packageDeclaration();
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMPORT) {
				{
				setState(105);
				importDeclarations();
				}
			}

			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==USE) {
				{
				setState(108);
				useDeclarations();
				}
			}

			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(111);
				otherDeclarations();
				}
			}

			setState(114);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackageDeclarationContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(OpalParser.PACKAGE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(OpalParser.IDENTIFIER, 0); }
		public TerminalNode SEMICOLON() { return getToken(OpalParser.SEMICOLON, 0); }
		public PackageDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageDeclaration; }
	}

	public final PackageDeclarationContext packageDeclaration() throws RecognitionException {
		PackageDeclarationContext _localctx = new PackageDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packageDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(PACKAGE);
			setState(117);
			match(IDENTIFIER);
			setState(118);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportDeclarationsContext extends ParserRuleContext {
		public List<ImportDeclarationContext> importDeclaration() {
			return getRuleContexts(ImportDeclarationContext.class);
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return getRuleContext(ImportDeclarationContext.class,i);
		}
		public ImportDeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDeclarations; }
	}

	public final ImportDeclarationsContext importDeclarations() throws RecognitionException {
		ImportDeclarationsContext _localctx = new ImportDeclarationsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importDeclarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(120);
				importDeclaration();
				}
				}
				setState(123); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IMPORT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportDeclarationContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(OpalParser.IMPORT, 0); }
		public ImportQualifiedNameContext importQualifiedName() {
			return getRuleContext(ImportQualifiedNameContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(OpalParser.SEMICOLON, 0); }
		public TerminalNode AS() { return getToken(OpalParser.AS, 0); }
		public ImportNameContext importName() {
			return getRuleContext(ImportNameContext.class,0);
		}
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDeclaration; }
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(IMPORT);
			setState(126);
			importQualifiedName();
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AS) {
				{
				setState(127);
				match(AS);
				setState(128);
				importName();
				}
			}

			setState(131);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportQualifiedNameContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(OpalParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(OpalParser.IDENTIFIER, i);
		}
		public List<TerminalNode> PERIOD() { return getTokens(OpalParser.PERIOD); }
		public TerminalNode PERIOD(int i) {
			return getToken(OpalParser.PERIOD, i);
		}
		public ImportQualifiedNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importQualifiedName; }
	}

	public final ImportQualifiedNameContext importQualifiedName() throws RecognitionException {
		ImportQualifiedNameContext _localctx = new ImportQualifiedNameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importQualifiedName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(IDENTIFIER);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PERIOD) {
				{
				{
				setState(134);
				match(PERIOD);
				setState(135);
				match(IDENTIFIER);
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(OpalParser.IDENTIFIER, 0); }
		public ImportNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importName; }
	}

	public final ImportNameContext importName() throws RecognitionException {
		ImportNameContext _localctx = new ImportNameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_importName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UseDeclarationsContext extends ParserRuleContext {
		public List<UseDeclarationContext> useDeclaration() {
			return getRuleContexts(UseDeclarationContext.class);
		}
		public UseDeclarationContext useDeclaration(int i) {
			return getRuleContext(UseDeclarationContext.class,i);
		}
		public UseDeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useDeclarations; }
	}

	public final UseDeclarationsContext useDeclarations() throws RecognitionException {
		UseDeclarationsContext _localctx = new UseDeclarationsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_useDeclarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(143);
				useDeclaration();
				}
				}
				setState(146); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==USE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UseDeclarationContext extends ParserRuleContext {
		public TerminalNode USE() { return getToken(OpalParser.USE, 0); }
		public UseQualifiedNameContext useQualifiedName() {
			return getRuleContext(UseQualifiedNameContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(OpalParser.SEMICOLON, 0); }
		public UseDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useDeclaration; }
	}

	public final UseDeclarationContext useDeclaration() throws RecognitionException {
		UseDeclarationContext _localctx = new UseDeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_useDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(USE);
			setState(149);
			useQualifiedName();
			setState(150);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UseQualifiedNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(OpalParser.IDENTIFIER, 0); }
		public TerminalNode PERIOD() { return getToken(OpalParser.PERIOD, 0); }
		public UseQualifiedNameTailContext useQualifiedNameTail() {
			return getRuleContext(UseQualifiedNameTailContext.class,0);
		}
		public UseQualifiedNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useQualifiedName; }
	}

	public final UseQualifiedNameContext useQualifiedName() throws RecognitionException {
		UseQualifiedNameContext _localctx = new UseQualifiedNameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_useQualifiedName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(IDENTIFIER);
			setState(153);
			match(PERIOD);
			setState(154);
			useQualifiedNameTail();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UseQualifiedNameTailContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(OpalParser.IDENTIFIER, 0); }
		public TerminalNode PERIOD() { return getToken(OpalParser.PERIOD, 0); }
		public UseQualifiedNameTailContext useQualifiedNameTail() {
			return getRuleContext(UseQualifiedNameTailContext.class,0);
		}
		public UseNameGroupContext useNameGroup() {
			return getRuleContext(UseNameGroupContext.class,0);
		}
		public UseNameWildcardContext useNameWildcard() {
			return getRuleContext(UseNameWildcardContext.class,0);
		}
		public UseQualifiedNameTailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useQualifiedNameTail; }
	}

	public final UseQualifiedNameTailContext useQualifiedNameTail() throws RecognitionException {
		UseQualifiedNameTailContext _localctx = new UseQualifiedNameTailContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_useQualifiedNameTail);
		int _la;
		try {
			setState(163);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(156);
				match(IDENTIFIER);
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PERIOD) {
					{
					setState(157);
					match(PERIOD);
					setState(158);
					useQualifiedNameTail();
					}
				}

				}
				break;
			case L_BRACKET:
				enterOuterAlt(_localctx, 2);
				{
				setState(161);
				useNameGroup();
				}
				break;
			case ASTERISK:
				enterOuterAlt(_localctx, 3);
				{
				setState(162);
				useNameWildcard();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UseNameGroupContext extends ParserRuleContext {
		public TerminalNode L_BRACKET() { return getToken(OpalParser.L_BRACKET, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(OpalParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(OpalParser.IDENTIFIER, i);
		}
		public TerminalNode R_BRACKET() { return getToken(OpalParser.R_BRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(OpalParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(OpalParser.COMMA, i);
		}
		public UseNameGroupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useNameGroup; }
	}

	public final UseNameGroupContext useNameGroup() throws RecognitionException {
		UseNameGroupContext _localctx = new UseNameGroupContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_useNameGroup);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(L_BRACKET);
			setState(166);
			match(IDENTIFIER);
			setState(171);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(167);
				match(COMMA);
				setState(168);
				match(IDENTIFIER);
				}
				}
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(174);
			match(R_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UseNameWildcardContext extends ParserRuleContext {
		public TerminalNode ASTERISK() { return getToken(OpalParser.ASTERISK, 0); }
		public UseNameWildcardContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useNameWildcard; }
	}

	public final UseNameWildcardContext useNameWildcard() throws RecognitionException {
		UseNameWildcardContext _localctx = new UseNameWildcardContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_useNameWildcard);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(ASTERISK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OtherDeclarationsContext extends ParserRuleContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public OtherDeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_otherDeclarations; }
	}

	public final OtherDeclarationsContext otherDeclarations() throws RecognitionException {
		OtherDeclarationsContext _localctx = new OtherDeclarationsContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_otherDeclarations);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			variableDeclaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDeclarationContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(OpalParser.VAR, 0); }
		public TerminalNode IDENTIFIER() { return getToken(OpalParser.IDENTIFIER, 0); }
		public TerminalNode SEMICOLON() { return getToken(OpalParser.SEMICOLON, 0); }
		public TypeSpecifierContext typeSpecifier() {
			return getRuleContext(TypeSpecifierContext.class,0);
		}
		public InitializerContext initializer() {
			return getRuleContext(InitializerContext.class,0);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_variableDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			match(VAR);
			setState(181);
			match(IDENTIFIER);
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(182);
				typeSpecifier();
				}
			}

			setState(186);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQUAL) {
				{
				setState(185);
				initializer();
				}
			}

			setState(188);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InitializerContext extends ParserRuleContext {
		public TerminalNode EQUAL() { return getToken(OpalParser.EQUAL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public InitializerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initializer; }
	}

	public final InitializerContext initializer() throws RecognitionException {
		InitializerContext _localctx = new InitializerContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_initializer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190);
			match(EQUAL);
			setState(191);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public AssignmentExpressionContext assignmentExpression() {
			return getRuleContext(AssignmentExpressionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}
